Created content pages

--- a/elements/body.html
+++ b/elements/body.html
@@ -19,30 +19,168 @@
    </div>
    <!--Content-->
    <div class="xl:col-span-10">
-    <div class="mt-8 xl:mt-24 xl:w-2/3">
-     <div class="my-4 mx-4 xl:mx-8">
-      <div>
+    <div class="mt-8 xl:mt-24">
+     <div class="my-4 mx-auto xl:mx-8 w-5/6 xl:w-4/6 divide-y divide-gray-300">
+      <div class="pb-8">
        <h2 class="text-blue-darkblue text-4xl -mt-2">
-        Elements - Body<span class="text-orange-coolblue">.</span>
+        Body<span class="text-orange-coolblue">.</span>
        </h2>
-       <p>In this section we cover the several elements that can be placed in the body of an email. Each of the following pages contains the different variations of a specific element type, like product positions or leaderboards.</p>
-       <h3 class="mt-8">
-        <a href="/elements/body/body-introductions.html">Introductions</a>
-       </h3>
-       <ul class="border-l-2 border-blue-500 pl-4 mt-2">
-        <li>
-         <p class="text-sm my-1"><a href="" class="hover:underline">Basic introduction</a></p>
-        </li>
-        <li>
-         <p class="text-sm my-1"><a href="" class="hover:underline">Introductions with image</a></p>
-        </li>
-        <li>
-         <p class="text-sm my-1"><a href="" class="hover:underline">Introductions with button</a></p>
-        </li>
-        <li>
-         <p class="text-sm my-1"><a href="" class="hover:underline">Introductions with button and image</a></p>
-        </li>
-       </ul>
+       <p>
+        The body contains the 'meat' of our email. Here we put blocks that contain the main content of the email, like information, promotions and branding items. All blocks in the body are optional and can be configured in many different ways. 
+       </p>
+      </div>
+      <div class="py-8">
+       <h3 class="pb-2">Essential elements</h3>
+       <p>The body of an email has no essential elements.</p>
+      </div>
+      <div class="py-8">
+       <h3 class="pb-2">Optional elements</h3>
+       <p>These elements can be used in emails, but are not necessary:</p>
+       <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Introductions</h4>
+          <p class="text-sm">Often used to open an email, containing the salutations towards the customer and some general text.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 4 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Leaderboard - regular</h4>
+          <p class="text-sm">A simple banner containing a promotion for a product or product type.<br>&nbsp;</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 4 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Leaderboard - experience</h4>
+          <p class="text-sm">A more visual banner, focused on using imagery in combination with a promotion.<br>&nbsp;</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 4 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Product positions</h4>
+          <p class="text-sm">A component containing a single or multiple products positioned next to each other.<br>&nbsp;</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 2 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Pre-header menu</h4>
+          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Pre-header menu</h4>
+          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Pre-header menu</h4>
+          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Pre-header menu</h4>
+          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Pre-header menu</h4>
+          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Pre-header menu</h4>
+          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Pre-header menu</h4>
+          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Pre-header menu</h4>
+          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Pre-header menu</h4>
+          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+       </div>
       </div>
      </div>
     </div>
