--- a/nav.html
+++ b/nav.html
@@ -16,7 +16,7 @@
  </div>
 </div>
 <div>
- <div class="m-4">
+ <div class="mx-4">
   <div class="divide-y divide-white hidden xl:block" id="topmenu">
    <!--Welcome-->
    <div class="py-4 menu">
