--- a/elements/body.html
+++ b/elements/body.html
@@ -30,17 +30,17 @@
        </p>
       </div>
       <div class="py-8">
-       <h3 class="pb-2">Essential elements</h3>
-       <p>The body of an email has no essential elements.</p>
+       <h3 class="pb-2">Essential components</h3>
+       <p>The body of an email has no essential components.</p>
       </div>
       <div class="py-8">
-       <h3 class="pb-2">Optional elements</h3>
-       <p>These elements can be used in emails, but are not necessary:</p>
+       <h3 class="pb-2">Optional components</h3>
+       <p>These components can be used in emails, but are not necessary:</p>
        <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
         <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
           <h4 class="pb-2">Introductions</h4>
-          <p class="text-sm">Often used to open an email, containing the salutations towards the customer and some general text.</p>
+          <p class="text-sm mb-2">Often used to open an email, containing the salutations and some general text.</p>
           <p class="text-sm text-gray-500 pb-2">Variations: 4 | Last updated: -</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
@@ -49,9 +49,9 @@
          </div>
         </a>
         <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
           <h4 class="pb-2">Leaderboard - regular</h4>
-          <p class="text-sm">A simple banner containing a promotion for a product or product type.<br>&nbsp;</p>
+          <p class="text-sm mb-2">A simple banner containing a promotion for a product or product type.</p>
           <p class="text-sm text-gray-500 pb-2">Variations: 4 | Last updated: -</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
@@ -60,9 +60,9 @@
          </div>
         </a>
         <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
           <h4 class="pb-2">Leaderboard - experience</h4>
-          <p class="text-sm">A more visual banner, focused on using imagery in combination with a promotion.<br>&nbsp;</p>
+          <p class="text-sm mb-2">A more visual banner, focused on using imagery in combination with a promotion.</p>
           <p class="text-sm text-gray-500 pb-2">Variations: 4 | Last updated: -</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
@@ -70,10 +70,11 @@
           </div>
          </div>
         </a>
+
         <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
           <h4 class="pb-2">Product positions</h4>
-          <p class="text-sm">A component containing a single or multiple products positioned next to each other.<br>&nbsp;</p>
+          <p class="text-sm mb-2">A component containing a single or multiple products positioned next to each other.</p>
           <p class="text-sm text-gray-500 pb-2">Variations: 2 | Last updated: -</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
@@ -82,10 +83,10 @@
          </div>
         </a>
         <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
-          <h4 class="pb-2">Pre-header menu</h4>
-          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
+          <h4 class="pb-2">Blog</h4>
+          <p class="text-sm mb-2">A component used to show a blog or advice article on the website.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 4 | Last updated: -</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
            <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
@@ -93,10 +94,22 @@
          </div>
         </a>
         <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
-          <h4 class="pb-2">Pre-header menu</h4>
-          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
+          <h4 class="pb-2">Video</h4>
+          <p class="text-sm mb-2">A component used to show video items or full videos in the email.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 5 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
+          <h4 class="pb-2">Comparison</h4>
+          <p class="text-sm mb-2">Components used for comparing products to each other, or showing individual USPs.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 2 | Last updated: -</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
            <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
@@ -104,10 +117,10 @@
          </div>
         </a>
         <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
-          <h4 class="pb-2">Pre-header menu</h4>
-          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
+          <h4 class="pb-2">Vouchers</h4>
+          <p class="text-sm mb-2">Components used for showing the receiver that they still have a voucher available.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 2 | Last updated: -</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
            <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
@@ -115,10 +128,22 @@
          </div>
         </a>
         <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
-          <h4 class="pb-2">Pre-header menu</h4>
-          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
+          <h4 class="pb-2">USP</h4>
+          <p class="text-sm mb-2">Components that can be used to show general Coolblue USPs in between the body content.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 2 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
+          <h4 class="pb-2">More blocks</h4>
+          <p class="text-sm mb-2">Components that can be used as entrances to different product types on the website.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 2 | Last updated: -</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
            <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
@@ -126,10 +151,10 @@
          </div>
         </a>
         <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
-          <h4 class="pb-2">Pre-header menu</h4>
-          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
+          <h4 class="pb-2">Interactive</h4>
+          <p class="text-sm mb-2">Interactive components that can be used in combination with fallback components.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 4 | Last updated: -</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
            <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
@@ -137,43 +162,22 @@
          </div>
         </a>
         <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
-          <h4 class="pb-2">Pre-header menu</h4>
-          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
-          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
+          <h4 class="pb-2">AMP</h4>
+          <p class="text-sm mb-2">Components that use the AMP4Email framework by Google.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 0 | Last updated: -</p>
+          <span class="bg-purple-coolblue py-1 px-2 text-sm rounded text-white bold label">In development</span>
           <div class="mt-4">
            <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
           </div>
          </div>
         </a>
-        <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
-          <h4 class="pb-2">Pre-header menu</h4>
-          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
-          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
-          <div class="mt-4">
-           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
-          </div>
-         </div>
-        </a>
-        <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
-          <h4 class="pb-2">Pre-header menu</h4>
-          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
-          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
-          <div class="mt-4">
-           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
-          </div>
-         </div>
-        </a>
-        <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
-          <h4 class="pb-2">Pre-header menu</h4>
-          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+
+        <a href="" style="order: 99;">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
+          <h4 class="pb-2">Miscellaneous</h4>
+          <p class="text-sm mb-2">A collection of miscellaneous components and items to use in emails.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 3 | Last updated: -</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
            <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
