--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
          <span class="text-blue-darkblue font-bold">Components</span> that we use to create our emails in both our marketing ESP and in-house software.
          <ul class="list-disc list-inside ml-6">
           <li class="text-gray-500 my-2">
-           <span class="text-blue-darkblue font-bold">Frameworks</span> <span class="text-black">are used to define our basics in email development. A set of CSS rules and a basic template to put our elements into.</span>
+           <span class="text-blue-darkblue font-bold">Frameworks</span> <span class="text-black">are used to define our basics in email development. A set of CSS rules and a basic template to put our components into.</span>
           </li>
           <li class="text-gray-500 my-2">
-           <span class="text-blue-darkblue font-bold">Header</span> <span class="text-black">contains all elements related to the header section of the email. Pieces like the blue logo bar and USP's at the top of an email.</span>
+           <span class="text-blue-darkblue font-bold">Header</span> <span class="text-black">contains all components related to the header section of the email. Pieces like the blue logo bar and USP's at the top of an email.</span>
           </li>
           <li class="text-gray-500 my-2">
-           <span class="text-blue-darkblue font-bold">Body</span> <span class="text-black">containing all content elements in a mail. Product positions, leaderboards, blog items and so on.</span>
+           <span class="text-blue-darkblue font-bold">Body</span> <span class="text-black">containing all content components in a mail. Product positions, leaderboards, blog items and so on.</span>
           </li>
           <li class="text-gray-500 my-2">
-           <span class="text-blue-darkblue font-bold">Footer</span> <span class="text-black">is in regards to all the elements we use to close off an email. Close Alert, the footer and more.</span>
+           <span class="text-blue-darkblue font-bold">Footer</span> <span class="text-black">is in regards to all the components we use to close off an email. Close Alert, the footer and more.</span>
           </li>
          </ul>
         </li>
