--- a/elements/header.html
+++ b/elements/header.html
@@ -26,17 +26,17 @@
         Header<span class="text-orange-coolblue">.</span>
        </h2>
        <p>
-        The header of an email within Coolblue contains several elements, some of which are essential to displaying the branding of our company. Other elements are optional, give the user options in showing more information, or directing them to other elements of our website.
+        The header of an email within Coolblue contains several components, some of which are essential to displaying the branding of our company. Other components are optional, give the user options in showing more information, or directing them to other components of our website.
        </p>
       </div>
       <div class="py-8">
-       <h3 class="pb-2">Essential elements</h3>
-       <p>These elements are always included in an email:</p>
+       <h3 class="pb-2">Essential components</h3>
+       <p>These components are always included in an email:</p>
        <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
         <a href="">
          <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
           <h4 class="pb-2">Logo bar</h4>
-          <p class="text-sm">Contains the logo and slogan of Coolblue.</p>
+          <p class="text-sm mb-2">Contains the logo and slogan of Coolblue.</p>
           <p class="text-sm text-gray-500 pb-2">Variations: 3 | Last updated: -</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
@@ -47,13 +47,13 @@
        </div>
       </div>
       <div class="py-8">
-       <h3 class="pb-2">Optional elements</h3>
-       <p>These elements can be used in emails, but are not necessary:</p>
+       <h3 class="pb-2">Optional components</h3>
+       <p>These components can be used in emails, but are not necessary:</p>
        <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
         <a href="">
          <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
           <h4 class="pb-2">Pre-header menu</h4>
-          <p class="text-sm">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
+          <p class="text-sm mb-2">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
           <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
@@ -64,7 +64,7 @@
         <a href="">
          <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
           <h4 class="pb-2">USP bar</h4>
-          <p class="text-sm">Contains multiple items containing unique selling points of Coolblue. Mostly used in promotional and marketing emails.</p>
+          <p class="text-sm mb-2">Contains multiple items containing unique selling points of Coolblue. Mostly used in promotional and marketing emails.</p>
           <p class="text-sm text-gray-500 pb-2">Variations: 3 | Last updated: -</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
@@ -75,7 +75,7 @@
         <a href="">
          <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
           <h4 class="pb-2">Notification bar</h4>
-          <p class="text-sm">Gives the option to put a notification like a warning or promotion at the top of the email.</p>
+          <p class="text-sm mb-2">Gives the option to put a notification like a warning or promotion at the top of the email.<br>&nbsp;</p>
           <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
           <span class="bg-red-coolblue py-1 px-2 text-sm rounded text-white bold label">Not in use</span>
           <div class="mt-4">
